# stm32-tiny-robot

./: .gitignore  CMakeLists.txt  CMakePresets.json  FLASHING.md  Makefile  README.md  STM32G491RETx_FLASH.ld  Toolchain.cmake  build.sh  cmake_install.cmake  download-drivers-simple.ps1  download-drivers.ps1  download-full-drivers.ps1  setup.ps1
Drivers/: .stm32cube_g4_minimal
cmake/: DownloadSTM32CubeG4.cmake  FindOpenOCD.cmake  FindSTM32G4xx.cmake  arm-gcc-toolchain.cmake  flash.cmake  stm32g491re.cmake  toolchain-gcc-arm-none-eabi.cmake
include/: stm32g4xx_hal_conf.h
scripts/: debug.gdb  flash_openocd.ps1  flash_openocd.sh
scripts/openocd/: interface_stlink.cfg  target_stm32g4x.cfg
src/: CMakeLists.txt  main.c  main_hal.c  system_stm32g4xx.c
tiny-robot/: CMakeLists.txt
